- (BUGF) allow deletion of eth0 if other interfaces are present
- (BUGF) fix server-override setting in CLI for profile objects
- (BUGF) systems and profiles are now sorted for "cobbler buildiso"
- (BUGF) ensure that directories exist when installing a template file
- (BUGF) fix for typo in network config snippet
- (BUGF) fix for func integration script (should overwrite config, not append)

- Fri Jan 09 2009 - 1.4.1
- (BUGF) Cobbler check looks for right httpd on SUSE
- (BUGF) post_install_network_config snippet had bash errors
- (BUGF) don't run restorecon programatically
- (FEAT) have cobbler check mention when semanage rules should be applied
- (BUGF) fix an obscure xmlrpclib corner case where a string that looks like an int can't be served because xmlrpclib thinks it's an int.  Applies to XMLRPC consumers only, not CobblerWeb or the cobbler CLI.
- (BUGF) fix external kickstart URLs (not templated) and per-system overrides.
- (BUGF) fix 'cobbler check' code for SuSE services
- (FEAT) batch editing on the system page.

- Fri Dec 19 2008 - 1.4
- (----) Stable release of 1.3 development branch

- Fri Dec 19 2008 - 1.3
- (FEAT) ACLs to extend authz (see Wiki)
- (FEAT) puppet integration with --mgmt-classes and external nodes URL
- (FEAT) added puppet external nodes script, cobbler-ext-nodes
         see https://fedorahosted.org/cobbler/wiki/UsingCobblerWithConfigManagementSystem
- (FEAT) ability to use --enable-menu=0/1 to hide profiles from the PXE menu, and config setting to change default value for --enable-menu
- (FEAT) added livecd based physical machine cloner script to "contrib"
- (FEAT) enable import for debian ISOs and mirrors (1 distro at a time for now)
- (FEAT) auto-create rescue profile objects
- (FEAT) included network_config snippet and added --static=0/1 to system objects
- (FEAT) cobbler report gains additional options for Wiki formatting, csv, and showing only certain fields